--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@ table#resultTable tbody tr td {
 		<div class="form-group">
 			<div class="form-row">
 				<div class="col-sm">
-					<select class="form-control" id="city_cd" name="city_cd" onchange="setSelectBox('N102', 'county_cd', this.value);" style="width:100%">
+					<select class="form-control" id="city_cd" name="city_cd" style="width:100%"
+						onchange="setSelectBox('N102', 'county_cd', this.value);">
 					    <option value="">전체</option>
 					    <option value="02">서울</option>
 					    <option value="31" selected>경기</option>
@@ -76,7 +77,8 @@ table#resultTable tbody tr td {
 					</select>
 				</div>
 				<div class="col-sm">
-					<select class="form-control" id="county_cd" name="county_cd" style="width:100%">
+					<select class="form-control" id="county_cd" name="county_cd" style="width:100%"
+						onchange="javascript:getResultTable(1)">
 						<option value="">전체</option>
 					</select>
 				</div>
@@ -107,7 +109,7 @@ table#resultTable tbody tr td {
 			</div>
 		</div>
 	</form>
-	<div class="table-responsive">
+	<div class="d-none table-responsive">
 		<table class="table table-bordered" id="resultTable">
 			<thead class="table-primary">
 				<tr>
@@ -135,16 +137,16 @@ table#resultTable tbody tr td {
 			<div class="spinner-border text-primary align-self-center"></div>
 		</div>
 	</div>
-	<div>
-	<ul class="pagination justify-content-center" id="pagination">
-	  <li class="page-item"><a class="page-link" href="javascript:void(0)">Prev</a></li>
-	  <li class="page-item"><a class="page-link" href="javascript:getResultTable(1)">1</a></li>
-	  <li class="page-item"><a class="page-link" href="javascript:getResultTable(2)">2</a></li>
-	  <li class="page-item"><a class="page-link" href="javascript:getResultTable(3)">3</a></li>
-	  <li class="page-item"><a class="page-link" href="javascript:getResultTable(4)">4</a></li>
-	  <li class="page-item"><a class="page-link" href="javascript:getResultTable(5)">5</a></li>
-	  <li class="page-item"><a class="page-link" href="javascript:getResultTable(6)">Next</a></li>
-	</ul>
+	<div class="d-none">
+		<ul class="pagination justify-content-center" id="pagination">
+		  <li class="page-item"><a class="page-link" href="javascript:void(0)">Prev</a></li>
+		  <li class="page-item"><a class="page-link" href="javascript:getResultTable(1)">1</a></li>
+		  <li class="page-item"><a class="page-link" href="javascript:getResultTable(2)">2</a></li>
+		  <li class="page-item"><a class="page-link" href="javascript:getResultTable(3)">3</a></li>
+		  <li class="page-item"><a class="page-link" href="javascript:getResultTable(4)">4</a></li>
+		  <li class="page-item"><a class="page-link" href="javascript:getResultTable(5)">5</a></li>
+		  <li class="page-item"><a class="page-link" href="javascript:getResultTable(6)">Next</a></li>
+		</ul>
 	</div>
 	<div class="text-secondary float-right">
 		<h6><small>출처: 전통시장 통통(소상공인시장진흥공단)</small></h6>
@@ -161,10 +163,12 @@ $(document).ready(function() {
 	});
 	var city_cd = $('select[name=city_cd]').val();
 	setSelectBox('N102', 'county_cd', city_cd);
-	getResultTable(1);
+	//getResultTable(1);
 });
 
 function getResultTable(cpage) {
+	$('div.d-none').removeClass('d-none');
+	
 	$('#blankResult').hide();
 	$('#resultTableBody').hide();
 	$('#loading').css('display','flex');
@@ -209,10 +213,10 @@ function getResultTable(cpage) {
 					$('#blankResult').show();
 					return;
 				}
-				rowElement.children(':nth-child(1)').text(x.cells.item(2).innerHTML);
-				rowElement.children(':nth-child(2)').text(x.cells.item(6).innerHTML);
-				rowElement.children(':nth-child(3)').text(x.cells.item(1).innerHTML);
-				rowElement.children(':nth-child(4)').text(x.cells.item(3).innerHTML);
+				rowElement.children(':nth-child(1)').text(x.cells.item(2).innerText);
+				rowElement.children(':nth-child(2)').text(x.cells.item(6).innerText);
+				rowElement.children(':nth-child(3)').text(x.cells.item(1).innerText);
+				rowElement.children(':nth-child(4)').text(x.cells.item(3).innerText);
 				
 				rowElement = rowElement.next();
 			}
@@ -228,7 +232,7 @@ function getResultTable(cpage) {
 
 function setPagination(cpage) {
 	var childIdx = 1;
-	var std = Math.floor(cpage / 5) * 5;
+	var std = Math.floor((cpage - 1) / 5) * 5;
 	for (var i = std; i <= std + 6; i++) {
 		var func = 'javascript:getResultTable('+i+')';
 		if (i == 0)
